cargo_test_final_verify.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
   Compiling simd-adler32 v0.3.8
   Compiling pxfm v0.1.27
   Compiling sha1 v0.10.6
   Compiling bytemuck v1.25.0
   Compiling miniz_oxide v0.8.9
   Compiling fdeflate v0.3.7
   Compiling byteorder-lite v0.1.0
   Compiling qrcodegen v1.8.0
   Compiling flate2 v1.1.9
   Compiling png v0.18.1
   Compiling sqlx-mysql v0.7.4
   Compiling constant_time_eq v0.3.1
   Compiling moxcms v0.7.11
   Compiling base32 v0.5.1
   Compiling sqlx v0.7.4
   Compiling compression-codecs v0.4.36
   Compiling image v0.25.9
   Compiling async-compression v0.4.39
   Compiling tower-http v0.5.2
   Compiling qrcodegen-image v1.5.1
   Compiling totp-rs v5.7.0
   Compiling auth-core v0.1.0 (/app/crates/auth-core)
   Compiling auth-cache v0.1.0 (/app/crates/auth-cache)
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
   Compiling auth-db v0.1.0 (/app/crates/auth-db)
   Compiling auth-extension v0.1.0 (/app/crates/auth-extension)
   Compiling auth-protocols v0.1.0 (/app/crates/auth-protocols)
   Compiling auth-api v0.1.0 (/app/crates/auth-api)
   Compiling auth-audit v0.1.0 (/app/crates/auth-audit)
warning: unused import: `StatusCode`
 --> crates/auth-api/src/handlers/oidc_provider.rs:5:12
  |
5 |     http::{StatusCode, HeaderMap},
  |            ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> crates/auth-api/src/handlers/oidc_provider.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `http::StatusCode`
  --> crates/auth-api/src/handlers/auth_flow.rs:14:5
   |
14 |     http::StatusCode,
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `auth_cache::Cache`
  --> crates/auth-api/src/handlers/oidc_provider.rs:12:5
   |
12 | use auth_cache::Cache;
   |     ^^^^^^^^^^^^^^^^^

warning: unused variable: `e`
   --> crates/auth-api/src/handlers/oidc_provider.rs:126:19
    |
126 |         .map_err(|e| ApiError::new(AuthError::InternalError))?; // Log error in real app
    |                   ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `auth-api` (lib) generated 5 warnings (run `cargo fix --lib -p auth-api` to apply 4 suggestions)
   Compiling auth-sso-platform v0.1.0 (/app)
error[E0063]: missing field `scope` in initializer of `Claims`
   --> tests/integration_tests.rs:102:12
    |
102 |         Ok(Claims {
    |            ^^^^^^ missing `scope`

error[E0063]: missing field `cache` in initializer of `AppState`
   --> tests/integration_tests.rs:253:5
    |
253 |     AppState {
    |     ^^^^^^^^ missing `cache`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `auth-sso-platform` (test "integration_tests") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
